# lil-blog-generator

./: .gitignore  README.md  app.py  error_handling.py  proxy.py  pyproject.toml  requirements.in  requirements.txt
static/assets/css/: blog.css  h2o-main.css  main.css
static/css/: custom.css  triangle.css
templates/: base.html  generic.html  login.html
templates/generator/: download.html  editor.html  h2o-scaffold.html  lil-scaffold.html  post.md  preview.html
